Fixed spacing around app and race buttons

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,9 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   height: 100vh; 
-  width: 100%;
-  margin: 0 auto;
-  padding: 2rem;
+  /* width: 100%; */
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
@@ -33,6 +33,11 @@ tr:hover td {
 .navbar {
   flex: 1;
   background-color:#61dafbaa
+}
+
+.race-button {
+  background-color: #03bcff !important;
+  margin: 5px !important;
 }
 
 @keyframes logo-spin {
